[gd_scene load_steps=3 format=1]

[ext_resource path="res://Scripts/Projectiles/WaterSplash.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Projectiles/WaterSplashProj.tscn" type="PackedScene" id=2]

[node name="Node2D" type="Node2D"]

visibility/blend_mode = 1
visibility/light_mask = 0
script/script = ExtResource( 1 )

[node name="Projectile1" parent="." instance=ExtResource( 2 )]

[node name="Projectile2" parent="." instance=ExtResource( 2 )]

transform/pos = Vector2( -25, -10 )

[node name="Projectile3" parent="." instance=ExtResource( 2 )]

transform/pos = Vector2( 25, -10 )

[node name="Projectile4" parent="." instance=ExtResource( 2 )]

transform/pos = Vector2( -40, -35 )

[node name="Projectile5" parent="." instance=ExtResource( 2 )]

transform/pos = Vector2( 40, -35 )

[node name="LifeTimer" type="Timer" parent="."]

process_mode = 1
wait_time = 2.0
one_shot = false
autostart = true

[node name="FreeTimer" type="Timer" parent="."]

process_mode = 1
wait_time = 2.4
one_shot = false
autostart = true

[connection signal="timeout" from="LifeTimer" to="." method="_on_LifeTimer_timeout"]

[connection signal="timeout" from="FreeTimer" to="." method="_on_FreeTimer_timeout"]


